# noc_agent

./: README.md  app.yaml  chat.py  config.yaml  langgraph_agent.ipynb  pyproject.toml  requirements.txt
agent/: config.yaml  react.py
interface/: chat.py
notebooks/: 00_get_pdf_images.ipynb  01_download_data.py  02_parse_noc_pdf.py  03_build_vector_search.py  04_prep_sql_functions.ipynb  05_build_agent.py  05_deploy_agent.py  build_vector_search.py  download_data.py  get_pdf_images.ipynb  parse_noc_pdf.py  prep_tables_and_functions.ipynb  scratch.ipynb
src/: config.py  data.py  noc.py  parse.py  retriever.py  states.py  utils.py
